--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     android:id="@+id/rlRoot"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    tools:context="com.chenantoa.main.MainActivity">
+    android:orientation="vertical">
 
-    <!--<FrameLayout-->
-    <!--android:id="@+id/flContainer"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:paddingTop="10dp"-->
-    <!--android:paddingBottom="20dp"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:layout_centerInParent="true">-->
-    <!--<ImageView-->
-    <!--android:layout_gravity="center_horizontal"-->
-    <!--android:src="@drawable/bg"-->
-    <!--android:layout_width="350dp"-->
-    <!--android:layout_height="480dp"/>-->
-    <!--</FrameLayout>-->
-    <com.chenantao.view.widget.StackLayout
-        android:paddingTop="10dp"
-        android:layout_centerInParent="true"
-        android:id="@+id/flContainer"
+    <Button
+        android:onClick="stackLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></com.chenantao.view.widget.StackLayout>
-</RelativeLayout>
+        android:layout_height="wrap_content"
+        android:text="大街app堆叠布局"/>
+    <Button
+        android:onClick="qqRocket"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="qq管家小火箭"/>
+    <Button
+        android:onClick="selectAddress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="京东选择地址"/>
+
+</LinearLayout>
